# spark-VM

./: .gitignore  AGENT.md  NETWORK.md  NEWREADME.md  README.md  design.md  firecracker_vm.py  firecracker_vm.rs  init_microvm.py  kernel.md  prompts.txt  pyproject.toml  sparkvm
"$tmp"/: state.db
.tmp-sparkvm-home/: state.db
examples/: Dockerfile  complexrun.py  create_rollout.py  dockerfile  githubExample.py  run_vm_failure_worker.py  run_vm_with_rollout.py  simplegithub.py
examples/complex_app/: Dockerfile
examples/network-app/: Dockerfile  README.md  app.py  main.py  run_example.py
examples/simple_app/: main.py  simplegithub.Dockerfile
prompts/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
scripts/: update_state_db.py
src/cli/: __init__.py  cleanup.py  main.py  runtimes.py  setup.py
src/sparkvm/: __init__.py  admission.py  api.py  cleanup.py  cli.py  commands.py  config.py  constants.py  db.py  disk.py  errors.py  image.py  image_builder.py  init_microvm.py  job.py  logger.py  machine_config.py  migrations.py  network.py  process.py  repositories.py  reservations.py  resource_policy.py  result.py  rollouts.py  runtime_store.py  scheduler.py  schema.sql  setup.py  state_store.py  utils.py  vm.py  worker_runner.py  workers.py
src/tests/: test_agent_contract.py  test_api_client.py  test_base_image_and_setup.py  test_cleanup.py  test_cli_workers.py  test_config_and_vm_negative.py  test_error_inheritance.py  test_examples_setup_observability.py  test_execution_disk_and_vm_run.py  test_image_builder.py  test_init_template_phase5.py  (+10 more)
(+49 files in other folders)
